remove feature flags, simply depend

--- a/doip-tokio/Cargo.toml
+++ b/doip-tokio/Cargo.toml
@@ -17,23 +17,22 @@ futures = "0.3"
 # required for set_reuseaddr
 socket2 = "0.4"
 thiserror = "1.0"
-tls-api = { version = "0.7", optional = true }
-tls-api-rustls = { version = "0.7", optional = true }
-tls-api-stub = { version = "0.7.0", optional = true }
+tls-api = { version = "0.7" }
+tls-api-rustls = { version = "0.7"}
 tokio = { version = "1.0", features = ["full"] }
 tokio-util = { version = "0.7", features = ["net", "codec"] }
 tracing = "0.1"
 
-[features]
-default = ["rustls"]
-tls = ["tls-api", "tls-api-stub"]
-rustls = ["tls-api", "tls-api-rustls"]
+#[features]
+#default = ["rustls"]
+#tls = ["tls-api", "tls-api-stub"]
+#rustls = ["dep:tls-api", "dep:tls-api-rustls"]
 # Offer non tls methods, network traffic is unprotected!
-insecure = []
+#insecure = []
 
 [dev-dependencies]
 # tls-api-rustls = "0.7"
 # rustls = "0.20.2"
-tls-api-openssl = "0.7.0"
-openssl = "0.10.38"
+#tls-api-openssl = "0.7.0"
+#openssl = "0.10.38"
 tracing-subscriber = "0.3"
